<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.bristol.plrg</groupId>
    <artifactId>fluidPrompt</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>
    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/cluelab/LLMPromptExecutor/</url>
        </repository>
    </repositories>
    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>
        <dependency>
            <groupId>fun.mike</groupId>
            <artifactId>diff-match-patch</artifactId>
            <version>0.0.2</version>
        </dependency>
        <dependency>
            <groupId>it.unisa.cluelab</groupId>
            <artifactId>promptexecutorcli</artifactId>
            <version>0.5</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version> <!-- O usa una versione aggiornata -->
                <configuration>
                    <source>22</source> <!-- Specifica la versione del JDK (ad esempio 21) -->
                    <target>22</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>uk.ac.bristol.plrg.Main</mainClass> <!-- Classe principale -->
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>